2013-08-11  0.8     Initial release

2013-08-12  0.9     Script no longer compresses files added with -a/--add.  It
                    still lists and reads compressed (.gz) files as before.

2013-08-16  0.91    Added an option (-A) to compress as before, though the
                    script still doesn't compress by default.

2013-08-22  0.95    Added the -e / --edit option to edit cheat sheets.  Idea
                    borrowed from user evaryont (https://github.com/evaryont)

2014-01-25  0.96    Added an (perhaps less than elegant) update function to
                    the script.  Whatever works.

2014-01-26  0.97    Added unsafe update functionality and a man page.  Also
                    altered the way the script checks for cheat sheets; it's a
                    bit friendlier now.

2014-03-21  0.98    Added DEFAULT_CHEAT_DIR and CHEATPATH functionality, as well
                    as changing the behavior of -l and --list to list all cheat
                    sheets.  Added -L; does the same but with full paths.

2014-04-05  0.99    Addressed at least one, possible two issues spotted by user
                    hkdobrev (help functionality issue, install issue).  Added a
                    temporary workaround for the third (cheat_sys_dir location)